refactor: Added some content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sakshi Site</title>
 </head>
 <body>
-    Hi there! Sakshi here
+    Hi there! Sakshi here.
+    This is my personal portfolio website.
 </body>
 </html>
