update: details of projects

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Hi there! Sakshi  here.
     This is my personal portfolio website.
+
+    I'have worked on some CLI apps. I'll showcase it here.
 </body>
 </html>
