--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     This is my personal portfolio website.
 
     I'have worked on some CLI apps. I'll showcase it here.
+
+    My favourite music band is Kodaline and my favorite book is Jane Eyre.
+    
 </body>
 </html>
