updated till nav

--- a/index.html
+++ b/index.html
@@ -4,15 +4,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sakshi  Site</title>
+    <title>Component Library</title>
 </head>
 <body>
-    Hi there! Sakshi  here.
-    This is my personal portfolio website.
+<h1>Sakshi's Component Library</h>
+    <p>I am attending neog.camp and I want to make a library which would make all projects look good and consistent.</p>
+    <hr>
 
-    I'have worked on some CLI apps. I'll showcase it here.
+    <h2>@typography</h2>
 
-    My favourite music band is Kodaline and my favorite book is Jane Eyre.
+    <h1>This is the biggest heading</h1>
+    <h2>This is second biggest heading</h2>
+    <p>Let me show you the normal text.This is free flowing and it will wrap at the end like a paragraph.</p>
+    <small>This is relatively smaller text.</small>
+
+    <h2>@container</h2>
+
+    <h3>fluid Container</h3>
+    <div>This is a fluid container and it will go till the end of the page.</div>
+
+    <h3>center Container</h3>
+    <div>This is the centered container and it will go till the specified width.</div>
+
+    <hr>
+
+    <h2>@links</h2>
+
+    <a href="/index.html">Primary Link</a>
+    <a href="/index.html">Secondary Link</a>
+
+    <hr>
+
+    <h2>@list</h2>
+
+    <h3>Unordered list</h3>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
+
+    <h3>Unordered Inline List</h3>
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ul>
+
+    <h3>Reversed Ordered List</h3>
+    <ol>
+        <li>Milk</li>
+        <li>Eggs</li>
+        <li>Bread</li>
+    </ol>
+
+    <hr>
+
+    <h2>@nav</h2>
+    <nav>
+        <div>IamBrand</div>
+        <ul>
+            <li>
+                <a href="/index.html">Home</a>
+            </li>
+            <li>
+                <a href="/index.html">Products</a>
+            </li>
+            <li>
+                <a href="/index.html">About</a>
+            </li>
+        </ul>
+    </nav>
+
+    <hr>
+    <h2>@header</h2>
     
+
+    <div style="height: 30vh;"></div>
+
 </body>
 </html>
